force-app/main/default/objects/Contact/fields/COMM_Address__c.field-meta.xml
<CustomField>
    <fullName>COMM_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>