force-app/main/default/objects/Contact/fields/COMM_AgreeToReceiveCommunications__c.field-meta.xml
<CustomField>
    <fullName>COMM_AgreeToReceiveCommunications__c</fullName>
    <description>Field that indicates if the contact accepts to receive communications from ANA</description>
    <label>Contact Agree to receive communications?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>