force-app/main/default/objects/Contact/fields/COMM_AirportTextList__c.field-meta.xml
<CustomField>
    <fullName>COMM_AirportTextList__c</fullName>
    <description>Field used on Sharing Rules. Due multi-picklist limitation.</description>
    <label>Airport Text List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>