force-app/main/default/objects/Contact/fields/COMM_ClientCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_ClientCode__c</fullName>
    <description>Code of the client associated to a specific account</description>
    <label>Client Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>