force-app/main/default/objects/Contact/fields/COMM_CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>COMM_CustomerNumber__c</fullName>
    <description>Number used to identify Customer in Commerce. Used for Update Calls using OCAPI.</description>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>