force-app/main/default/objects/Contact/fields/COMM_EffectiveAccountId__c.field-meta.xml
<CustomField>
    <fullName>COMM_EffectiveAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that the Contact is using. Used to dynamically control Sharing in Community when using Account Switcher.</description>
    <label>Effective Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Effective Contacts</relationshipLabel>
    <relationshipName>EffectiveContacts</relationshipName>
    <type>Lookup</type>
</CustomField>