force-app/main/default/objects/Contact/fields/COMM_EmailValidationChangedAddress__c.field-meta.xml
<CustomField>
    <fullName>COMM_EmailValidationChangedAddress__c</fullName>
    <description>Field for Email Change Request Validation, used to confirm what the new email the contact is expected to use once validated</description>
    <label>Email Validation Changed Address</label>
    <type>Email</type>
</CustomField>