force-app/main/default/objects/Contact/fields/COMM_EmailValidationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_EmailValidationDate__c</fullName>
    <description>This field contains the date of when the user successfully validate his account</description>
    <label>Email Validation Date</label>
    <type>DateTime</type>
</CustomField>