force-app/main/default/objects/Contact/fields/COMM_EmailValidationExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_EmailValidationExpirationDate__c</fullName>
    <description>This field has the date of when the user validation email link will expire.</description>
    <label>Email Validation Expiration Date</label>
    <type>DateTime</type>
</CustomField>