force-app/main/default/objects/Contact/fields/COMM_EmailValidationURL__c.field-meta.xml
<CustomField>
    <fullName>COMM_EmailValidationURL__c</fullName>
    <description>This field contains the validation email link url.</description>
    <label>Email Validation Url</label>
    <type>TextArea</type>
</CustomField>