force-app/main/default/objects/Contact/fields/COMM_ForgotPasswordEmailExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>COMM_ForgotPasswordEmailExpirationDate__c</fullName>
    <description>This field contains the date of when the user forgot password email link will expire.</description>
    <label>Forgot Password Email Expiration Date</label>
    <type>DateTime</type>
</CustomField>