force-app/main/default/objects/Contact/fields/COMM_ForgotPasswordEmailUrl__c.field-meta.xml
<CustomField>
    <fullName>COMM_ForgotPasswordEmailUrl__c</fullName>
    <description>This field contains the forgot password email link url.</description>
    <label>Forgot Password Email URL</label>
    <type>TextArea</type>
</CustomField>