force-app/main/default/objects/Contact/fields/COMM_GDPRConsent__c.field-meta.xml
<CustomField>
    <fullName>COMM_GDPRConsent__c</fullName>
    <description>Field that indicates if the contact accepts to receive Marketing and communication content</description>
    <label>Contact GDPR Consent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>