force-app/main/default/objects/Contact/fields/COMM_MarketingAndCommunicationConsent__c.field-meta.xml
<CustomField>
    <fullName>COMM_MarketingAndCommunicationConsent__c</fullName>
    <label>Marketing and Communication Consent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Confirmation</valueSetName>
    </valueSet>
</CustomField>