force-app/main/default/objects/Contact/fields/COMM_MigrationCreateExternalUser__c.field-meta.xml
<CustomField>
    <fullName>COMM_MigrationCreateExternalUser__c</fullName>
    <description>To be used on External User migration</description>
    <label>Migration Create External User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROCESSED</fullName>
            </value>
            <value>
                <fullName>TO PROCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>