force-app/main/default/objects/Contact/fields/COMM_PreferredContact__c.field-meta.xml
<CustomField>
    <fullName>COMM_PreferredContact__c</fullName>
    <description>Indicates the contact method that the Client prefers to receive communications</description>
    <label>Contact Preferred Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>