force-app/main/default/objects/Contact/fields/COMM_SetForCommerceIntegration__c.field-meta.xml
<CustomField>
    <fullName>COMM_SetForCommerceIntegration__c</fullName>
    <description>Formula to indicate if Account is an Affiliate. Used to check if Commerce integration is used.</description>
    <formula>Account.COMM_IsAffiliate__c</formula>
    <label>Set for Commerce Integration</label>
    <type>Checkbox</type>
</CustomField>