force-app/main/default/objects/Contact/recordTypes/COMM_Contact.recordType-meta.xml
<RecordType>
    <fullName>COMM_Contact</fullName>
    <active>true</active>
    <description>Default Contact Record Type</description>
    <label>Contact</label>
</RecordType>